# wisper

./: .gitignore  CLAUDE.md  README.md  audio_capture.py  main.py  main_single_track.py  models.py  multitalker_transcript_config.py  pyproject.toml  readme  realtime_asr.py  serve.py  server.py  test_transcript.py  transcript_store.py  wisper-lessons.html
