[project]
name = "wisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moviepy>=2.2.1",
    "nemo-toolkit[asr]>=2.6.1",
    "pytubefix>=8.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
cu128 = [
    "torch>=2.5.1",
    "torchvision>=0.24.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


